# privacy-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-pages.yml
Documents/learning/classification-agent/: .gitignore  README.md  pyproject.toml
Documents/learning/classification-agent/baml_src/: classification.baml
Documents/learning/classification-agent/bruno/classificationagent/: opencollection.yml  run.yml
Documents/learning/classification-agent/src/baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
Documents/learning/classification-agent/src/classifyagent/: __init__.py  __main__.py  app.py  classifier.py  models.py  service.py
Documents/learning/classification-agent/tests/: test_app.py  test_health.py  test_service.py
baml_src/: detection.baml  generators.baml  pii_detection.baml  reviewer.baml
bruno/: folder.yml
bruno/privacyagent/: health.yml  opencollection.yml  run.yml
docs/: api.md  index.md
docs/stylesheets/: extra.css
src/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
src/privacyagent/: __init__.py  __main__.py  analyzer.py  app.py  config.py  detector.py  models.py  service.py
tests/: conftest.py  test_app.py  test_config.py  test_detector.py  test_health.py  test_service.py
