[project]
name = "privacy-agent"
version = "0.1.0"
description = "REST service that detects PII in submitted payloads"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "baml-py>=0.219.0",
    "fastapi>=0.116.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
privacy-agent = "privacyagent.__main__:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/privacyagent"]
